# Tutor-Feedback-Tool

./: .env.example  .gitignore  README.md  pyproject.toml
automations/n8n/: README.md  TutorFeedbackWebhookWorkflow.json
mcp/: server.py
styles/: humanities_explained.yaml  intergreat.yaml  intergreat_paste.yaml  keystone  keystone_quick.yaml  politicsexplained.yaml  private tutee  private.yaml  simpletext.yaml
styles/intergreat/examples/: README.txt
styles/politicsexplained/examples/: README.txt
styles/simpletext/examples/: README.txt
tests/: test_automation.py  test_idempotency.py  test_intergreat_format.py  test_paste_input_adapter.py  test_result_schema.py  test_styles.py  test_trigger_creates_job.py  test_trigger_validation.py  test_validation.py  test_webhook.py  test_webhook_auth.py
tutor_feedback/: __init__.py  __main__.py  claude_extract.py  claude_render.py  cli.py  config.py  ffmpeg_utils.py  models.py  paste_pipeline.py  storage.py  styles.py  transcribe.py  utils.py  validate.py  web.py
tutor_feedback/automation/: __init__.py  jobs.py  notifications.py  result_schema.py  runner.py  state.py  watcher.py  webhook_server.py
tutor_feedback/inputs/: __init__.py  base.py  paste_input.py
tutor_feedback/static/: index.html
