[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-feedback-pipeline"
version = "0.1.0"
description = "Turn tutoring session recordings into platform-specific feedback"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.39",
    "faster-whisper>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
tutor-feedback = "tutor_feedback.cli:app"

[tool.setuptools.packages.find]
include = ["tutor_feedback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
